Pull request #304: Bugfix/ikresic MM-5461 android post notifications request loops to the infinity and beyond
Merge in MML/infobip-mobile-messaging-android from bugfix/ikresic-MM-5461-android-post-notifications-request-loops-to-the-infinity-and-beyond to master

Squashed commit of the following:

commit 939b2491bdc5bd7297b9696c79b09ac04293db3f
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Dec 22 13:34:01 2022 +0100

    - code cleanup

commit 2471aaa29679ffb0e24cba5b52c202f7ae16e08b
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 17:25:22 2022 +0100

    - code cleanup

commit 3a22e2acf63f073df14b24c7ccf2db17870e2ffb
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 16:47:47 2022 +0100

    - code cleanup

commit a4f153574fd67d6e737960c4c58cc4ece36fdb6a
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 16:38:34 2022 +0100

    - code cleanup

commit a27af0eb247091f47ca4da8d23698719b30a1e59
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 12:06:41 2022 +0100

    - code cleanup

commit 24da661f6648f0d4930c2b73b55bf64715c14d58
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 12:02:43 2022 +0100

    - code cleanup

commit 4460b8fb62c655efb30d3392f8d04a1d37d0ed0f
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Dec 21 11:51:58 2022 +0100

    - code cleanup

commit 5c2bf8db7eb67d05ffdd75503d7cec09ff408578
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Dec 20 18:35:29 2022 +0100

    - replaced AppCompatActivity with ComponentActivity

commit 5354975e509f2456a52bda4924fbb862ea2f4355
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Dec 20 17:45:44 2022 +0100

    - translation fix

commit 5a88d0c753b158ad781f5990dfe69f4d24e4db1d
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Dec 20 17:08:50 2022 +0100

    - code cleanup

commit 3177adfe60f0e687de392342edd418cb50f91af7
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Dec 20 17:05:52 2022 +0100

    - updated string keys and fi

--- a/infobip-mobile-messaging-android-resources/src/main/res/values-ar/strings.xml
+++ b/infobip-mobile-messaging-android-resources/src/main/res/values-ar/strings.xml
@@ -5,4 +5,6 @@
     <string name="mm_button_open">فتح</string>
     <string name="mm_button_cancel">إلغاء</string>
     <string name="mm_button_settings">الإعدادات</string>
+    <string name="mm_post_notifications_settings_title">تحديث إعدادات الإخطارات</string>
+    <string name="mm_post_notifications_settings_message">اسمح للتطبيق بإرسال إشعارات فورية طوال الوقت للسماح له بتشغيل الإشعارات حتى عندما يكون التطبيق مغلقًا أو غير مستخدم</string>
 </resources>
