--- a/infobip-mobile-messaging-android-resources/src/main/res/values-in/strings.xml
+++ b/infobip-mobile-messaging-android-resources/src/main/res/values-in/strings.xml
@@ -5,4 +5,6 @@
     <string name="mm_button_open">Buka</string>
     <string name="mm_button_cancel">Batal</string>
     <string name="mm_button_settings">Pengaturan</string>
+    <string name="mm_post_notifications_settings_title">Perbarui pengaturan notifikasi</string>
+    <string name="mm_post_notifications_settings_message">Izinkan aplikasi untuk mengirim pemberitahuan push setiap saat untuk membiarkannya memicu pemberitahuan bahkan saat aplikasi ditutup atau tidak digunakan</string>
 </resources>
