Pull request #309: MCA-2530 - chat - show error messages, public api success/error callbacks
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2327-error_handling to master

Squashed commit of the following:

commit ba38a7489fa1888281ca5b1f31cd413d573d3f56
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jan 24 13:36:45 2023 +0100

    MCA-2327 - move no valid registration error during pending registration to chat fragment, error enums instead of constants

commit 5465ca01ac7d5677d99d4c5fdb44582dac00e5d0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jan 18 12:58:43 2023 +0100

    MCA-2530 JS error objects parsed, no more undefined error msg + fixed review points

commit 6a09d7ff9b6bb161b0193d5df2bdf2340f16c1eb
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Mon Jan 16 15:56:56 2023 +0100

    MCA-2530 - replace succes/error listeners with result listener, multithread fix, lang and context data method overload

commit 75e6e912c6f06ae248893d7d4078726bde243b49
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Thu Jan 12 15:10:18 2023 +0100

    MCA-2530 - something went wrong error prefix

commit 5f6bcc1c391d786575b00ee0cf42f9b8328e67f5
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Thu Jan 12 14:40:50 2023 +0100

    MCA-2530 - chat - show error messages, public api success/error callbacks

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="ib_chat_permissions_not_granted_title">Permissions not granted</string>
     <string name="ib_chat_permissions_not_granted_message">You can grant them in application settings.</string>
     <string name="ib_chat_cant_create_attachment">Cannot create attachment from selected file</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Something went wrong: %1$s.</string>
 </resources>
