Pull request #312: MCA-2617 JWT Authentication for InAppChat, updated Demo application with auth usecase
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2598_jwt_auth to master

Squashed commit of the following:

commit 87d4f1ff6e037660440bff3a49cf7f48b49a859e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jan 31 15:47:43 2023 +0100

    MCA-2617 JWT lib only for chat flavour

commit e8c214394455060f1800f61e0483db08ee95e787
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:56:41 2023 +0100

    MCA-2617 Hide progress bar

commit 43b88d45dbd233110a3772c79aafd6aadf6041ad
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:53:00 2023 +0100

    MCA-2617 Clean forgotten code

commit 270882a93204da11d095f8927d5fc23465d60d34
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:39:33 2023 +0100

    MCA-2617 Removed UI hardcoded values

commit 48350a5680602d74c6d119cf1169c0dfa9d40c62
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 11:42:01 2023 +0100

    MCA-2617 JWT Authentication for InAppChat, updated Demo application with auth usecase

--- a/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
@@ -3,10 +3,17 @@
 
     <string name="main_activity_title" tools:ignore="MissingTranslation">Chat Example</string>
     <string name="main_activity_button_open_title" tools:ignore="MissingTranslation">Go to chat screen</string>
-
+    <string name="mm_open_chat">Open chat</string>
+    <string name="mm_personalize">Personalize</string>
+    <string name="mm_depersonalize">Depersonalize</string>
     <string name="action_registration_id_copy" tools:ignore="MissingTranslation">Registration ID</string>
-
     <string name="toast_registration_id_copy" tools:ignore="MissingTranslation">Registration ID copied to clipboard</string>
+    <string name="push_registration_id">Push registration ID</string>
+    <string name="subject_type">Subject type</string>
+    <string name="customer_name">Customer name</string>
+    <string name="subject">Subject</string>
+    <string name="open_auth_chat">Open authenticated chat</string>
+
     <string name="turkish">Türkçe</string>
     <string name="korean">한국어</string>
     <string name="russian">Русский</string>
@@ -31,4 +38,10 @@
     <string name="slovenian">Slovenščina</string>
     <string name="ukrainian">украї́нська</string>
     <string name="english">English</string>
+
+    <string-array name="subject_types">
+        <item>E-mail</item>
+        <item>Phone number</item>
+        <item>External person ID</item>
+    </string-array>
 </resources>
