Pull request #315: MCA-2633 RtcUi appId not cleared after disabling calls.
Merge in MML/infobip-mobile-messaging-android from feature/jdzubak-MCA-2633-missing-call to webrtcui-release-candidate

Squashed commit of the following:

commit 9865458f34f2a251e9502e05083ae8fe8e4c00dd
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Feb 15 15:30:53 2023 +0100

    MCA-2633 JWT token creation moved to utils class

commit 384fa498cbbc757af5e1ae27b1cacb638809af42
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Feb 15 08:38:29 2023 +0100

    MCA-2633 User MM logger everywhere

commit 9990464ba27764a88cf5747d082a9fee33b184b0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Feb 13 15:54:22 2023 +0100

    MCA-2633 RtcUi appId not cleared after disabling calls. JWT together with calls. Created chatCommon source set in demo app to share common code.

--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/res/values/strings.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="main_activity_title">Chat with calls example</string>
-    <string name="mm_open_chat">Open chat</string>
-    <string name="mm_personalize">Personalize</string>
-    <string name="mm_depersonalize">Depersonalize</string>
-    <string name="action_registration_id_copy">Registration ID</string>
-    <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
+    <string name="enable_calls">Enable calls</string>
+    <string name="disable_calls">Disable calls</string>
 </resources>
