--- a/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="slovenian">Slovenščina</string>
     <string name="ukrainian">украї́нська</string>
     <string name="english">English</string>
+    <string name="german">German</string>
 
     <string-array name="subject_types">
         <item>E-mail</item>
