remove rtl unicode signs from ar localisation

--- a/infobip-rtc-ui/src/main/res/values-ar/strings.xml
+++ b/infobip-rtc-ui/src/main/res/values-ar/strings.xml
@@ -3,7 +3,7 @@
     <string name="mm_accept">قبول</string>
     <string name="mm_decline">رفض</string>
     <string name="mm_cancel">إلغاء</string>
-    <string name="mm_ok">‫حسنا‬</string>
+    <string name="mm_ok">حسنا</string>
     <string name="mm_video_call">مكالمة فيديو</string>
     <string name="mm_flip_camera">قلب الكاميرا</string>
     <string name="mm_speaker">مكبر الصوت</string>
