--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="english">English</string>
     <string name="french">Français</string>
     <string name="greek">Ελληνικά</string>
+    <string name="german">Deutsch</string>
     <string name="hungarian">Magyar</string>
     <string name="italian">Italiano</string>
     <string name="japanese">日本語</string>
